# ip-demo-project-v2

./: .dockerignore  .env.example  .gitignore  BUILD_REPORT.md  CLAUDE.md  FIX_SPEC.md  FIX_SPEC_R3.md  FIX_SPEC_R4.md  FIX_SPEC_R5.md  FIX_SPEC_R6.md  FIX_SPEC_R7.md  PROGRESS.md  README.md  ROUND2_STARTER_PROMPT.md  ROUND3_STARTER_PROMPT.md  ROUND4_STARTER_PROMPT.md  ROUND5_STARTER_PROMPT.md  ROUND6_STARTER_PROMPT.md  ROUND7_STARTER_PROMPT.md  RUNBOOK.md  pyproject.toml  run_local_api.py  uv.toml  uv.toml.example
.claude/agents/: fable-architect.md
app/agents/core/: base_agent.py
app/agents/nodes/: commentary_agent.py  explainability_agent.py  revenue_agent.py  supervisor_agent.py
app/agents/registry/: agent_registry.py  topology.py
app/agents/state/: agent_state.py
app/api/: dependencies.py  main.py
app/api/middleware/: correlation.py  error_handlers.py
app/api/routers/: adapters.py  config.py  config_status.py  diagnostics.py  env_health.py  graph_access.py  guardrails.py  health.py  ingestion.py  manifest.py  observability.py  tigergraph_foundation.py  v2.py
app/config/: __init__.py  constants.py  manifest.py  runtime_config.py  settings.py  validation.py
app/feature_store/: sqlite_manager.py
app/graph/: artifacts.py  client.py  foundation_store.py  mock_graph_store.py  models.py  tier_log.py  tiered_client.py  tigergraph_mcp_adapter.py  tigergraph_mcp_contracts.py  tigergraph_mcp_query_contracts.py  tigergraph_mcp_stdio_client.py  tigergraph_rest_adapter.py  tigergraph_schema_contracts.py
app/graph/access/: graph_access_client.py  graph_models.py
app/graph/mock/: mock_graph_data_service.py
app/graph/queries/: __init__.py  common.py  v2.py
app/graph/tigergraph/: mcp_client.py  mcp_library_client.py  rest_client.py  schema_inventory.py
app/guardrails/: __init__.py  client.py  models.py  numeric_validation.py  service.py
app/ingestion/: checkpoint_repository.py  delta_detector.py  entity_registry.py  graph_validation.py  ingestion_service.py  remediation.py  run_all.py  tigergraph_upsert.py  validation_engine.py
app/llm/: __init__.py  azure_openai_adapter.py  client.py  embedding_client.py  llm_runtime.py  mock_llm_adapter.py  models.py  prompt_templates.py  rerank_client.py
app/models/: common.py  enums.py  ingestion.py  runtime.py  shared.py
app/observability/: recorder.py
app/services/: adapter_status_service.py  environment_health_service.py  graph_access_service.py  runtime_status_service.py  tigergraph_foundation_service.py
app/shared/: adapter_logging.py  correlation.py  exceptions.py  ids.py  logging.py  responses.py  schema_names.py
app/v2/: calendar.py  format.py  source_catalog.py
app/v2/anomalies/: detection.py  service.py
app/v2/assistant/: answers.py  context.py  guardrail_gate.py  llm_fallback.py  providers.py  router.py  service.py  store.py
app/v2/commentary/: generation_workflow.py  judge.py
app/v2/dataset/: __init__.py  builder.py  provenance.py
app/v2/drivers/: attribution.py  service.py
app/v2/revenue/: aggregation.py  eligibility.py  service.py
data/sample/edges/: balance_for_account.csv  balance_in_month.csv  change_for_advisor.csv  change_for_group.csv  change_from_month.csv  change_to_month.csv  commentary_cites_driver.csv  commentary_for_advisor.csv  commentary_from_month.csv  commentary_in_version.csv  commentary_to_month.csv  driver_for_group.csv  driver_has_cause.csv  driver_of_change.csv  evaluation_of_commentary.csv  evidence_for_driver.csv  group_in_line.csv  line_in_class.csv  mpr_for_advisor.csv  mpr_for_group.csv  mpr_in_month.csv  phx_dm_v2_anomaly_cites_driver.csv  phx_dm_v2_anomaly_for_advisor.csv  phx_dm_v2_anomaly_in_scan.csv  phx_dm_v2_balance_for_account.csv  phx_dm_v2_balance_in_month.csv  phx_dm_v2_change_for_group.csv  phx_dm_v2_commentary_cites_driver.csv  phx_dm_v2_commentary_for_advisor.csv  phx_dm_v2_commentary_from_month.csv  phx_dm_v2_commentary_in_version.csv  phx_dm_v2_commentary_to_month.csv  phx_dm_v2_driver_for_group.csv  phx_dm_v2_driver_has_cause.csv  phx_dm_v2_driver_of_change.csv  phx_dm_v2_evaluation_of_commentary.csv  phx_dm_v2_evidence_for_driver.csv  phx_dm_v2_line_in_class.csv  phx_dm_v2_mpr_for_advisor.csv  phx_dm_v2_mpr_for_group.csv  (+11 more)
data/sample/vertices/: account.csv  account_month_balance.csv  advisor.csv  commentary.csv  commentary_evaluation.csv  commentary_version.csv  driver_cause.csv  evidence.csv  month.csv  monthly_product_revenue.csv  phx_dm_v2_account.csv  (+27 more)
docs/: REUSE_MAP.md  ROUND5_ACCEPTANCE.md  ROUND5_CHANGED_FILES.md  ROUND6_CHANGED_FILES.md  ROUND7_ACCEPTANCE.md  ROUND7_CHANGED_FILES.md  SOLUTION_GUIDE.md
docs/agents/: AGENT_SPEC.md
docs/data/: EXTRACTION_SPEC.md  source_catalog.json
docs/tigergraph/: QUERY_SPEC.md  SCHEMA_SPEC.md
docs/tigergraph_foundation/: CHANGELOG.md  Makefile  PACKAGE_STATUS.md  README.md  RELEASE_MANIFEST.sha256  UPSTREAM_FIXES.md  VALIDATION_REPORT.md  docker-compose.yml
docs/ui/: DESIGN_TOKENS.md  UI_SPEC.md
docs/v1_patterns/: EXAMPLE_mock_query_impls.py  EXAMPLE_query.gsql  EXAMPLE_query_catalog.json  EXAMPLE_reader_run_query.py  EXAMPLE_work_report.md  README.md
frontend/: .env.local.example  .npmrc.client-template  .npmrc.example  components.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: navigation.ts  scope-options.ts  utils.ts
frontend/styles/: tokens.ts
prompts/: attribution (1).py  attribution.py  test_prompt.txt
qa_screenshots/: index.md
scripts/: build_real_data.py  capture_evidence.mjs  check_client_deps.py  check_client_npm.py  generate_extraction_sql.py  generate_sample_data.py  generate_schema_artifacts.py  init_local_storage.py  make_ingestion_fixtures.py  make_test_raw_extracts.py  run_api.sh  run_ui.sh  runtime_preflight.py  validate_v2_queries.py  verify_anomalies.py  verify_assistant.py  verify_assistant_ui.mjs  verify_attribution.py  verify_end_to_end.py  verify_ingestion_fixes.py
(+125 files in other folders)
